# MYDB

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  RUST_QUICK_STARTUP.md  RUST_SETUP.md  prompt.docx  下一阶段迭代清单.md
benchmarks/: baseline-v1.2.0.md
crates/mydb-core/: Cargo.toml
crates/mydb-core/src/: schema.rs
crates/mydb-exec/src/: lib.rs
crates/mydb-server/: Cargo.toml
crates/mydb-server/src/: main.rs
crates/mydb-sql/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/mydb-storage/: Cargo.toml
crates/mydb-storage/src/: buffer.rs  catalog.rs  disk.rs  ordered_index.rs
crates/mydb-tests/tests/: sql_engine_milestone4.rs
crates/rusedb-core/: Cargo.toml
crates/rusedb-core/src/: error.rs  (+4 more)
crates/rusedb-exec/: Cargo.toml
crates/rusedb-exec/src/: lib.rs
crates/rusedb-server/: Cargo.toml
crates/rusedb-server/src/: main.rs
crates/rusedb-sql/: Cargo.toml
crates/rusedb-storage/: Cargo.toml
crates/rusedb-tests/: Cargo.toml
docs/: architecture.md  error-codes.md  ops-runbook.md  query_engine.md  sql-support-matrix.md  storage_engine.md  transaction.md  usage_manual.md
mydb/: Cargo.toml  README.md
mydb-instance/: mydb.conf
mydb-instance/data/: mydb.columns  mydb.table-1.heap  mydb.tables
mydb/crates/mydb-core/src/: error.rs  lib.rs  row.rs  types.rs
mydb/crates/mydb-exec/: Cargo.toml
mydb/crates/mydb-exec/src/: lib.rs
mydb/crates/mydb-server/: Cargo.toml
mydb/crates/mydb-sql/: Cargo.toml
mydb/crates/mydb-sql/src/: ast.rs  lib.rs  parser.rs
mydb/crates/mydb-storage/src/: heap.rs  lib.rs  page.rs
mydb/crates/mydb-tests/: Cargo.toml
mydb/crates/mydb-tests/src/: lib.rs
mydb/crates/mydb-tests/tests/: catalog_milestone2.rs  storage_heap.rs
tmp/: demo.columns  demo.tables  demo_btree.index-1.idx  demo_btree.table-1.heap  demo_idx.columns  demo_idx.index-1.idx  demo_idx.table-1.heap  demo_idx.tables  demo_sql.table-1.heap  demo_update.index-1.idx  demo_update.indexes  demo_update.table-1.heap
(+15 files in other folders)
