[workspace]
members = [
    "crates/rusedb-core",
    "crates/rusedb-storage",
    "crates/rusedb-sql",
    "crates/rusedb-exec",
    "crates/rusedb-server",
    "crates/rusedb-tests",
]
resolver = "3"

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "MIT"
authors = ["RuseDB"]
rust-version = "1.85"
