[package]
name = "rusedb-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rusedb-core = { path = "../rusedb-core" }
rusedb-sql = { path = "../rusedb-sql" }
rusedb-storage = { path = "../rusedb-storage" }
