[package]
name = "mydb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
mydb-core = { path = "../mydb-core" }
mydb-exec = { path = "../mydb-exec" }
mydb-sql = { path = "../mydb-sql" }
mydb-storage = { path = "../mydb-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
